@@ -32,7 +32,6 @@
 
 #include "ts/ts.h"
 #include "ts/experimental.h"
-
 #include "ink_defs.h"
 
 static TSCont global_contp;
