@@ -29,7 +29,7 @@
 #include <stddef.h>
 
 #ifdef HAVE_STDINT_H
-#define __STDC_LIMIT_MACROS
+#define __STDC_LIMIT_MACROS 1
 # include <stdint.h>
 #else
 // TODO: Add "standard" int types?
