@@ -14,17 +14,14 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-pkglibdir = ${pkglibexecdir}
+include $(top_srcdir)/build/plugins.mk
 
-
-AM_CXXFLAGS = \
+AM_CPPFLAGS += \
   -I$(srcdir)/lib \
   -I$(srcdir)/fetcher \
-  -I$(srcdir)/test \
-  -I$(top_builddir)/proxy/api \
-  -I$(top_srcdir)/proxy/api \
-  -I$(top_builddir)/lib/ts \
-  -I$(top_srcdir)/lib/ts \
+  -I$(srcdir)/test
+
+AM_CXXFLAGS = \
   -Wno-deprecated
 
 pkglib_LTLIBRARIES = esi.la combo_handler.la
@@ -68,21 +65,21 @@ combo_handler_la_SOURCES = \
 	fetcher/HttpDataFetcherImpl.cc
 
 esi_la_LIBADD = libesi.la
-esi_la_LDFLAGS = -module -avoid-version -shared
+esi_la_LDFLAGS = $(TS_PLUGIN_LDFLAGS)
 
 combo_handler_la_LIBADD = libesi.la
 combo_handler_la_LDFLAGS = -module -avoid-version -shared
 
 docnode_test_SOURCES = test/docnode_test.cc test/print_funcs.cc
-docnode_test_LDADD = libesi.la  @LIBDL@ -lz -lpthread
+docnode_test_LDADD = libesi.la  @LIBDL@ -lz @LIBTHREAD@
 parser_test_SOURCES = test/parser_test.cc test/print_funcs.cc
-parser_test_LDADD = libesi.la  @LIBDL@ -lz -lpthread
+parser_test_LDADD = libesi.la  @LIBDL@ -lz @LIBTHREAD@
 processor_test_SOURCES = test/processor_test.cc test/HandlerMap.cc test/StubIncludeHandler.cc test/print_funcs.cc
-processor_test_LDADD = libtest.la  @LIBDL@ -lz -lpthread
+processor_test_LDADD = libtest.la  @LIBDL@ -lz @LIBTHREAD@
 utils_test_SOURCES = test/utils_test.cc test/print_funcs.cc
-utils_test_LDADD = libesi.la  @LIBDL@ -lz -lpthread
+utils_test_LDADD = libesi.la  @LIBDL@ -lz @LIBTHREAD@
 vars_test_SOURCES = test/vars_test.cc test/print_funcs.cc
-vars_test_LDADD = libesi.la @LIBDL@ -lz -lpthread
+vars_test_LDADD = libesi.la @LIBDL@ -lz @LIBTHREAD@
 
 TESTS = $(check_PROGRAMS)
 
