@@ -14,7 +14,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-pkglibdir = ${pkglibexecdir}
+include $(top_srcdir)/build/plugins.mk
 
 if BUILD_HAVE_CXX_11
 
@@ -22,12 +22,8 @@ pkglib_LTLIBRARIES = spdy.la
 lib_LTLIBRARIES = libspdy.la
 check_PROGRAMS = zstream_test
 
-AM_CPPFLAGS = \
-  -I$(srcdir)/lib \
-  -I$(top_builddir)/lib/ts \
-  -I$(top_srcdir)/lib/ts \
-  -I$(top_builddir)/proxy/api \
-  -I$(top_srcdir)/proxy/api
+AM_CPPFLAGS += \
+  -I$(srcdir)/lib
 
 if BUILD_HAVE_LIBCXX
 AM_CXXFLAGS = -stdlib=libc++
@@ -47,7 +43,7 @@ libspdy_la_SOURCES = \
   lib/spdy/zstream.cc
 
 spdy_la_LIBADD = libspdy.la
-spdy_la_LDFLAGS = -module -avoid-version -shared
+spdy_la_LDFLAGS = $(TS_PLUGIN_LDFLAGS)
 
 zstream_test_SOURCES = tests/zstream_test.cc tests/stubs.cc
 zstream_test_LDADD = libspdy.la -lz
