@@ -45,7 +45,10 @@
 #include <limits.h>
 #include <sys/mman.h>
 
-#define __STDC_FORMAT_MACROS
+#ifndef __STDC_FORMAT_MACROS
+#define __STDC_FORMAT_MACROS 1
+#endif
+
 #include <inttypes.h>
 
 #include <time.h>
